fixed alignment issues in mobileFooter navbar ui

--- a/client/src/components/mobileFooterNavbar/mobileFooterNavbar.css
+++ b/client/src/components/mobileFooterNavbar/mobileFooterNavbar.css
@@ -6,6 +6,7 @@
     border: 1px solid #C8C8C8;
     border-left: none;
     border-right: none;
+    margin-top: 36px;
     /* margin-top: 48px; */
 }
 
